[GLT-4098] support multiple assays per requisition (#204)